--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		</div>
 	</section>
 	<footer>
-		<h1 class="h1">CODE BROTHES</h1>
+		<h1 class="h1">DEIVYS LAREZ</h1>
 	</footer>
 	<script src="js/main.js"></script>
 </body>
